Zara Website 1/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');

/*Core Styles*/ 


* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

/* body{
    margin:0; 
    background: #333;
    color: #fff; 
    font-size: 1.1em;
    line-height: 1.5; 
    text-align: center; 

    font-family: 'Poppins', sans-serif;
    color: #333;
    background: whitesmoke;
} */

body {
  color: #eaeaea;
  font-family: 'Lora', serif;
  font-size: 16px;
  line-height: 1.5;
  background: black;
}


img {
  display: block;
  width: 100%; 
  height: auto; 
}



h1, h2, h3{
  margin: 0;
  padding: 1em 0; 
  font-family: 'Montserrat', sans-serif;
  font-weight: 300;
  text-transform: uppercase;
}

p{
  margin:0; 
  padding: 1em 0; 
}
/* p{
    margin:0; 
    padding: 1em 0; 
}
 */

/* p
{
  font-size: 1em;
  margin:0;
  font-weight: 400;
 
} */


.btn{
    display: inline-block;
    background: #333;
    color: white; 
    text-decoration: none;
    padding: 1em 2em; 
    border: 1px solid #666; 
    margin: .5em 0; 
}

.btn:hover{
    background: #eaeaea; 
    color: #333; 
}

/*Navigation Bar*/ 

ul {
    list-style-type: none;
  }

.navbar {
    background: black;
    /* opacity: 0.4; */
    color: black;
    height: 70px;
    padding: 10px 50px;
    font-family: 'Montserrat', sans-serif;
    text-transform: uppercase;
    z-index: 1000 ;
    
   
  }
  
  .logo img {
      height: 4.5em;
      padding: 0.4em;
  
  
  }
  
  .navbar a {
      color: white;
      text-decoration: none;
      font-size: 0.8em;
      /* font-weight: bold; */
    }
  
    .navbar a:hover{
        color: goldenrod;
  
    }
    
    /*this makes the CONTAINER the parent so that the boxes are the children
if the navbar was parent, the container class is the only children*/
.navbar .container{
    display:flex;
    justify-content: space-between; /*space between the "flexbox logo and then nav bar links*/
    align-items: center;
    height: 100%;

}

/*add flexblox IN the navbar ul so that we can make the items go horizontal INSTEAD of vertical*/

.navbar ul{
    display: flex;

}

/*children of the navbar ul*/
.navbar ul li{
    margin-left: 10px; /*makes it so that there is 20px margin on left of each item*/
    margin-right: 10px
}

/*Sidebar*/

.toggle
{ 
  position: relative;
  width: 60px;
  height: 60px;
  background: url(https://i.ibb.co/HrfVRcx/menu.png);
  background-repeat: no-repeat;
  background-size: 30px;
   background-position: center;
  cursor: pointer; 
}

.toggle.active
{
  background: url(https://i.ibb.co/rt3HybH/close.png);
  background-repeat: no-repeat;
  background-size: 25px;
  background-position: center;
  cursor: pointer;
}



.menu
{
  position:fixed;
  background-color: white;
  top: 0;
  right: 0;
  width: 300px;
  height: 100%;
  display: flex;
  justify-content: bottom;
  align-content: center;

}
.menu ul
{
  position: relative;
}
.menu ul li
{
  list-style: none;
}
.menu ul li a
{
  text-decoration: none;
  font-size: 24px;
  color: #111;
}
.menu ul li a:hover
{
  color: goldenrod; 
}

    
/*Header Showcase*/

#showcase{
    min-height: 450px;
    text-align: center;
}

#showcase .content-wrap, 
#section-a .content-wrap  {
    padding: 0 1.5em;
}


#showcase .bg-image{
    position: absolute; 
    background: rgb(0, 0, 0) url('https://www.designscene.net/wp-content/uploads/2020/04/ZARA-SS20-Steven-Meisel-00.jpg');
    background-position: top;
    background-repeat: no-repeat;
    background-size: cover;
    width: 100%; 
    height: 450px;
    z-index: -100; 
    opacity: 0.4;
    /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
}



#showcase .bg-image1{
  position: absolute; 
  background: rgb(0, 0, 0) url('https://i.insider.com/5ba9319491ff6dbe478b4570?width=1200&format=jpeg');
  background-position: top;
  background-repeat: no-repeat;
  background-size: cover;
  width: 100%; 
  height: 300px;
  z-index: -100; 
  opacity: 0.4;
  /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
}



/* video*/

/* #showcase .bg-image{
    position: absolute; 
    /* background: rgb(0, 0, 0) url('https://www.designscene.net/wp-content/uploads/2020/04/ZARA-SS20-Steven-Meisel-00.jpg');
    background-position: top;
    background-repeat: no-repeat;
    object-fit: cover;
    width: 100%; 
    min-height: 450x;
    z-index: -1000; 
    opacity: 0.8;
    /*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text
} */ 


#showcase h1{
    padding-top:100px;
    padding-bottom: 0px;  
}

/*Banner*/
#banner{
  min-height: 300px;
  text-align: center;
}

#banner .content-wrap{
  padding: 0 1.5em;
}


#banner .image{
position: absolute; 
background: rgb(0, 0, 0) url('https://blog.procurify.com/app/uploads/2016/10/zara-blog-04-1024x576.jpg');
background-position: center;
background-repeat: no-repeat;
background-size: cover;
width: 100%; 
height: 300px;
z-index: -100; 
opacity: 0.25;
/*the higher the Z index is, the closer to you it is. this ensure that image is BEHIND the text*/
}


/*same as showcase*/
#banner h1{
  padding-top:100px;
  padding-bottom: 0px;  
}



/*Section A*/ 
#section-a{
    background: #eaeaea; 
    color: #333; 
    /* padding-bottom: 2em;  */
}

/*section B*/
#section-b, #section-j{
    z-index: 1000;
    padding: 2em 1em 1em; 
    background: white;
    
}

#section-b ul, #section-j li, ul{
    list-style: none; /*gets rids of bullets*/
    margin:0; 
    padding:0;

}

#section-j li, #section-b li{
    margin-bottom: 1em; 
    color: #333;
    /* background: white
    ;  */
    padding: 1em;
}

.card-content{
    padding: 0.2em;
    font-size: 0.65em;

 
    
}

.card-title{
  font-weight: none;
}

/*section C*/ 

#section-c{
    background: whitesmoke;
    color: #333; 
    padding: 1.5em;
}

#section-c h2{
  padding: 0%;
}

#section-c p{
  font-family: 'Montserrat', sans-serif;
}

/*Section d / Boxes*/
#section-d .box{
  padding-right: 1em;
  padding-top: 1em;
  padding-bottom: 1em;
  padding-left: 0.4em;
  
  color: white; 
  background-color: whitesmoke;

  position: relative;
  text-align: center;
  color: white;
  z-index: -2;

}

#section-d .box:first-child{
  padding-left: 1em;
  padding-right: 0.4em;
  /* background-color: rgb(139, 57, 57); */
 
 }

 /*section e = contact us page*/

 /*Section d / Boxes*/
#section-d .box{
  padding-right: 1em;
  padding-top: 1em;
  padding-bottom: 1em;
  padding-left: 0.4em;
  
  color: black; 
  background-color: whitesmoke;

  position: relative;
  text-align: center;
  z-index: -2;

}

#section-d .box:first-child{
  padding-left: 1em;
  padding-right: 0.4em;
  /* background-color: rgb(139, 57, 57); */
 
 }

/* #section-d .box img{
   width: 50EMx; height: 58EM; object-fit: fill; 


} */

#section-z{
  display: flex; 
  justify-content: space-between;
  
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /* font-size: large; */
  z-index: 1000;
}

.box a {
  color: white;
  text-decoration: none;
  font-weight: bold;
  font-size: 1.1em;
  font-weight: bold;
}

.box a:hover{
  
  color: goldenrod;

}

.content-wide{
  padding: 1em;
  text-align: center;
}


/*footer*/
#main-footer{
    padding: 2em; 
    background: black; 
    color: whitesmoke;
    text-align: center; 

}

p.social{
  padding: 0px;
}



/*change url color and remove underline*/
#main-footer{
    font-family: 'Montserrat', sans-serif;
    font-weight: 300;
    text-transform: uppercase;
}

#main-footer a{
    color: #2690d4; 
    text-decoration: none; 
}

#main-footer input[type=text] {
    font-family: 'Montserrat', sans-serif;
  
    font-size: 1em;
    padding: 0.5em;
   
    background-color: black;
    color: #eaeaea;
    border-right: #eaeaea;
    text-align: left;
    width: 18em;
  }

p.copyright{
  padding: 0px;
}


  .social ul
{
  padding: 0.5em;
  /* position: absolute; */
  z-index: 10;
  /* bottom: 20px; */
  display: flex;
  justify-content: center;
  align-items: center;
}
.social li
{
  list-style: none;
}
.social li a
{
  display: inline-block;
  margin-left: 30px;
  margin-right: 20px;
  filter: invert(1);
  transform: scale(0.5);
  transition: 0.5s;
}
.social li a:hover
{
  transform: scale(0.5) translateY(-15px);
}


.content
{
 position: absolute;
  right: 0;
}
.content.active
{
  right: 300px;
}



/*Media Query*/ 

/*styles put in here are only going to be in affect IF the width is greater than 700px*/

@media(min-width: 700px){
  .grid {
      display: grid; 
      grid-template-columns: 1fr repeat(2, minmax(auto, 25em )) 1fr; 
  }

  #section-a .content-text {
      columns: 2; 
      column-gap: 2em;
  }

  #section-a .content-text p {
     padding-top:0;
  }

  .content-wrap, 
  #section-b ul{
      grid-column: 2/4; 
  }

  .box, #main-footer div{
      grid-column: span 2; 
  }

  #section-b ul, #section-j ul{
      display: flex;
      justify-content: space-around; 
  }

  #section-j li, #section-b li{
      width: 31%; 
  }

  #section-j ul, .content-wide{
    grid-column: 1/5; 
}
/* 
.content-wide{

} */

}

